--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "_redirects"
+              "src/_redirects"
             ],
             "styles": [
               "src/styles.scss",
